# arc-evolve

./: .cursorignore  .env.example  .gitignore  README.md  pyproject.toml
src/EEVEE/: orchestrator.py
src/EEVEE/models/: __init__.py  claude_models.py  gemini_models.py  grok_models.py
src/EEVEE/prompts/: classifier_prompt.py  feedback_prompt.py  mass_mutation_prompt.py  solver_prompt.py  sudden_death_prompt.py
src/EEVEE/step_1/: mini_orchestrator.py
src/EEVEE/step_1/children/: detector.py
src/EEVEE/step_2/: mini_orchestrator.py
src/EEVEE/step_2/children/: classifier.py
src/EEVEE/step_2/children/visual_priors/: __init__.py
src/EEVEE/step_2/children/visual_priors/adjacent_marker_pair_replacement/: hint_for_llm.py  what_to_look_for_classifier.py
src/EEVEE/step_2/children/visual_priors/alternating_color_path_flood/: hint_for_llm.py  what_to_look_for_classifier.py
src/EEVEE/step_3/: config.py  mini_orchestrator.py
src/EEVEE/step_3/children/llm/: llm_wrappers.py
src/EEVEE/step_3/children/mutation/: mass_mutation.py
src/EEVEE/step_3/children/solvers/: parallel_solver.py  single_solver.py
src/EEVEE/step_3/children/types/: island_types.py
src/EEVEE/step_3/children/utils/: executor.py  friends.py  scoring.py
src/EEVEE/step_3/children/verifier/: evaluator.py
src/EEVEE/step_4/: mini_orchestrator.py
src/EEVEE/step_4/children/: formatter.py
src/EVAL/: config.py  orchestrator.py  runner.sh
src/EVAL/helpers/: ascii.py  get_question.py  parallel.py  submit_answer.py  summary.py
(+669 files in other folders)
